# FastMarching-

./: HeapAndStruct.cpp  HeapAndStruct.h  HeapAndStructVector.cpp  HeapAndStructVector.h  LICENSE  README.md  main.cpp  settings.h
OpenMp/: CMakeLists.txt  HeapAndStructVector.cpp  HeapAndStructVector.h  main.cpp  settings.h
ParallelTiming/: CMakeLists.txt  HeapAndStructVector.h  main.cpp  settings.h
Parallelprogress/: HeapAndStructVector.cpp  main.cpp  settings.h
paralleltest/: CMakeLists.txt  HeapAndStructVector.h  main.cpp  settings.h
sequential/: HeapAndStructVector.cpp  HeapAndStructVector.h  main.cpp  settings.h
vtk_examples/: distance_cube_ball_2.vts  distance_cube_ver_1.vts  distance_cube_ver_2.vts  distance_cube_ver_3.vts  distance_cube_ver_4.vts  distance_cube_ver_5.vts  distance_cube_ver_6.vts  info.txt
